# sc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py  static_analysis.cmake
.github/workflows/: ci.yaml  coverage.yaml  dynamic-analysis.yaml  static-analysis.yaml
example/: CMakeLists.txt  main.cpp
include/sc/: SCClient.hpp  sc.hpp
scripts/: echo-server.py  echo-server.sh
src/: CMakeLists.txt  SCClient.cpp  sc.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  example.cpp
tests/: CMakeLists.txt  SCClientTests.cpp  TestServer.cpp  TestServer.hpp  scTests.cpp
